update autoB lp

--- a/html/lesson_plans/seacole_autobiographical_writing.html
+++ b/html/lesson_plans/seacole_autobiographical_writing.html
@@ -70,7 +70,7 @@
                 <ol>
                   <li><a href="#pathway-1">Race and Gender in Victorian Life Writing</a></li>
                   <li><a href="#pathway-2">Caribbean Autobiographical Writing</a></li>
-                  <li><a href="#pathway-3">Caribbean Autobiographical Writing</a></li>
+                  <li><a href="#pathway-3">In The Wake: Victorian-Caribbean-Autobiography</a></li>
                 </ol>
               </li>
               <li><a href="#topics">Related Contemporary Topics</a></li>
@@ -112,7 +112,7 @@
             </section>
 
             <section aria-labelledby="pathway-3">
-              <h4 id="pathway-3">Caribbean Autobiographical Writing</h4>
+              <h4 id="pathway-3">In The Wake: Victorian-Caribbean-Autobiography</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anonymous [1808] 2008; Barringer and Modest 2018; Brereton 1998; Brodber 2014; Brontë [1847] 2003; James 2009; Levy 2010; McCaulay 2012; Paquet 2002; Pennington 2018; Pinto 2019; Rhys 1966; Salih 2005; Sharpe 2016</p>
 
               <p><strong>Summary:</strong> Materials in this section invite consideration of Victorian autobiographical exchange by women writers in England and the Caribbean. The selection of texts respond to historiographies of nineteenth-century colonial culture and extant materials documenting the lives of enslaved peoples. In some cases, contemporary Caribbean writers on this list respond directly to Victorian texts, such as Jean Rhys’s <em>Wide Sargasso Sea</em>. In other cases, however, contemporary Caribbean writers wrestle with gaps, silences, and foreclosed perspectives in literary history. In the later case, these writers use what audiences may think they know about nineteenth-century culture as a springboard for illuminating the necessity and limits of recovery work. The selection of texts prompts consideration of whether or how contemporary Caribbean writers are producing Neo-Victorian narratives.</p>
