--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -81,8 +81,8 @@
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Southern Africa, 1825-1930</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Archival Erasure and the Aftermath of Slavery</a></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Slavery and Theories of Sexuality, Desire, and Family</a></li>
+						<li><a href="/html/lesson_plans/africa_archival_erasure.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Archival Erasure and the Aftermath of Slavery</a></li>
+						<li><a href="/html/lesson_plans/africa_slavery_theories.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Slavery and Theories of Sexuality, Desire, and Family</a></li>
 					</ul>
 				</section>
 
