--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -195,6 +195,7 @@
 					<section aria-labelledby="biography">
 						<h3 id="biography">Developer Biography</h3>
 
+						<p>Kira Braham completed her Ph.D. in English at Vanderbilt University in 2020. She will join the faculty of the Louisiana School for Math, Science, and the Arts in Fall 2021. Her fledgling book project, <em>Victorian Vita Activa: Work Ethics and Prowork Politics</em>, explores nineteenth-century philosophies of work and their potential role in reenergizing and reimagining twenty-first century labor politics. Her research interests include nineteenth-century British and transatlantic literatures, Caribbean literatures, working-class literatures, histories and ethnographies of work, science fiction, and utopian studies. Her work has appeared in <em>Extrapolation</em> and <em>The Gissing Journal</em>.</p>
 					</section>
 
 					<section aria-labelledby="citation">
