corr africa intro

--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -52,7 +52,7 @@
 
 						<p><strong>Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-          	<p><strong>Lesson Plan Developers:</strong>  Carolyn Betensky, Melissa Free, Sophia Hsu, Ji Eun Lee, Cherrie Kwok</p>
+          	<p><strong>Lesson Plan Developers:</strong>  Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee</p>
 
 						<div>
 							<strong>Lesson Plan Pages:</strong> 
@@ -77,7 +77,7 @@
 						
 						<p>As part of that process, we aim to integrate into our Victorian studies courses materials that are not only about and from Africa but also <em>by</em> Africans and the African diaspora. Designing these lesson plans is a start. In formulating them, we asked ourselves a range of questions, such as: What counts as Victorian? According to whom? What are the geographical and temporal boundaries, if any, of the Victorian studies classroom? Why? Who studies and teaches Victorian literature, history, and culture, and who does not? What role does positionality play in that study and teaching?</p>
 						
-						<p>Each lesson plan takes a different approach to answering these questions. The lesson plan on the dramatic monologue and travel narratives start with canonical nineteenth-century British genres to show how pairing them with Black-authored or Africa-centered texts opens up these forms to new avenues of critique. The southern Africa and Ethiopianism lesson plans prove that the empire was messy, unstable, and contested by foregrounding the tensions and connections between and among racial, ethnic, and national groups, and southern Africa’s ever-shifting political landscape. Finally, the lesson plans on archival erasure and sexuality, desire, and family consider how centering slavery in the study of nineteenth-century Britain alters some of the major conceptual and methodological issues of our field. We offer these lesson plans not as experts but as collaborators, with one another and with you.</p>
+						<p>Each lesson plan takes a different approach to answering these questions. The lesson plans on the dramatic monologue and travel narratives start with canonical nineteenth-century British genres to show how pairing them with Black-authored or Africa-centered texts opens up these forms to new avenues of critique. The southern Africa and Ethiopianism lesson plans prove that the empire was messy, unstable, and contested by foregrounding the tensions and connections between and among racial, ethnic, and national groups, and southern Africa’s ever-shifting political landscape. Finally, the lesson plans on archival erasure and sexuality, desire, and family consider how centering slavery in the study of nineteenth-century Britain alters some of the major conceptual and methodological issues of our field. We offer these lesson plans not as experts but as collaborators, with one another and with you.</p>
 					</section>
 
 					<section aria-labelledby="citation">
