--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -187,6 +187,42 @@
 
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
+		<style>
+			@media only screen and (min-width: 480px){
+				.breakout-quote .poem.zong span{
+					white-space: nowrap;
+					position: absolute;
+				}
+				.breakout-quote .poem.zong span:nth-child(1),
+				.breakout-quote .poem.zong span:nth-child(5){
+					left: 50%;
+					transform: translate(-70%, 0);
+					-moz-transform: translate(-70%, 0);
+					-webkit-transform: translate(-70%, 0);
+				}
+				.breakout-quote .poem.zong span:nth-child(3),
+				.breakout-quote .poem.zong span:nth-child(7){
+					right: 50%;
+					transform: translate(115%, 0);
+					-moz-transform: translate(115%, 0);
+					-webkit-transform: translate(115%, 0);
+				}
+			}
+			@media only screen and (min-width: 768px){
+				.breakout-quote .poem.zong span:nth-child(1),
+				.breakout-quote .poem.zong span:nth-child(5){
+					transform: translate(-100%, 0);
+					-moz-transform: translate(-100%, 0);
+					-webkit-transform: translate(-100%, 0);
+				}
+				.breakout-quote .poem.zong span:nth-child(3),
+				.breakout-quote .poem.zong span:nth-child(7){
+					transform: translate(100%, 0);
+					-moz-transform: translate(100%, 0);
+					-webkit-transform: translate(100%, 0);
+				}
+			}
+		</style>			
 		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
