update erasure for poem

--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -187,41 +187,10 @@
 
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
+
 		<style>
-			@media only screen and (min-width: 480px){
-				.breakout-quote .poem.zong span{
-					white-space: nowrap;
-					position: absolute;
-				}
-				.breakout-quote .poem.zong span:nth-child(1),
-				.breakout-quote .poem.zong span:nth-child(5){
-					left: 50%;
-					transform: translate(-70%, 0);
-					-moz-transform: translate(-70%, 0);
-					-webkit-transform: translate(-70%, 0);
-				}
-				.breakout-quote .poem.zong span:nth-child(3),
-				.breakout-quote .poem.zong span:nth-child(7){
-					right: 50%;
-					transform: translate(115%, 0);
-					-moz-transform: translate(115%, 0);
-					-webkit-transform: translate(115%, 0);
-				}
-			}
-			@media only screen and (min-width: 768px){
-				.breakout-quote .poem.zong span:nth-child(1),
-				.breakout-quote .poem.zong span:nth-child(5){
-					transform: translate(-100%, 0);
-					-moz-transform: translate(-100%, 0);
-					-webkit-transform: translate(-100%, 0);
-				}
-				.breakout-quote .poem.zong span:nth-child(3),
-				.breakout-quote .poem.zong span:nth-child(7){
-					transform: translate(100%, 0);
-					-moz-transform: translate(100%, 0);
-					-webkit-transform: translate(100%, 0);
-				}
-			}
+			/* Styling for Philip poem */
+			@media only screen and (min-width: 320px){.breakout-quote .poem.zong span:nth-child(5){padding-left:9em}.breakout-quote .poem.zong span:nth-child(3),.breakout-quote .poem.zong span:nth-child(7){float:right}}@media only screen and (min-width: 480px){.breakout-quote .poem.zong span{white-space:nowrap;position:absolute}.breakout-quote .poem.zong span:nth-child(1),.breakout-quote .poem.zong span:nth-child(5){left:50%;transform:translate(-70%, 0);-moz-transform:translate(-70%, 0);-webkit-transform:translate(-70%, 0)}.breakout-quote .poem.zong span:nth-child(3),.breakout-quote .poem.zong span:nth-child(7){right:50%;transform:translate(115%, 0);-moz-transform:translate(115%, 0);-webkit-transform:translate(115%, 0)}}@media only screen and (min-width: 768px){.breakout-quote .poem.zong span:nth-child(1),.breakout-quote .poem.zong span:nth-child(5){transform:translate(-100%, 0);-moz-transform:translate(-100%, 0);-webkit-transform:translate(-100%, 0)}.breakout-quote .poem.zong span:nth-child(3),.breakout-quote .poem.zong span:nth-child(7){transform:translate(100%, 0);-moz-transform:translate(100%, 0);-webkit-transform:translate(100%, 0)}}
 		</style>			
 		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" />
