--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -54,7 +54,7 @@
 
 				<section aria-labelledby="seacole-1">
 					<h2 id="seacole-1">Mary Seacole and the Caribbean #1</h2>
-					<div><a href=""><img loading="lazy" src="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div>
+					<div><a href="/html/lesson_plans/seacole_caribbean_introduction.html"><img loading="lazy" src="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div>
 				</section>
 
 				<section aria-labelledby="africa-1">
@@ -67,7 +67,7 @@
 					<ul>
 						<li>Lesson Plans</li>
 						<li><a href="/html/lesson_plans/seacole_decentering_britishness.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decentering Britishness</a></li>
-						<li><a href="/html/lesson_plans/seacole_autobiographical_writing.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Autobiographical Writing</a></li>
+						<li><a href="/html/lesson_plans/seacole_undisciplining_autobiography.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Undisciplining Victorian Autobiography</a></li>
 						<li><a href="/html/lesson_plans/seacole_recentering_nursing.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Recentering Nursing in Wartime</a></li>
 						<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decolonizing Health(care)</a></li>
 					</ul>
