--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
     <title>Africa, Diaspora, and the British Empire | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Provides lesson plans for integrating materials not only about and from Africa but also by Africans and the African diaspora into Victorian studies courses." />
+		<meta name="description" content="Introduces lesson plans for integrating materials not only about and from Africa but also by Africans and the African diaspora into Victorian studies courses." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
@@ -82,7 +82,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>Sophia Hsu, Carolyn Betensky, Melissa Free, Sophia Hsu, Ji Eun Lee, Cherrie Kwok. “Africa, Diaspora, and the British Empire: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html">https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html</a>.</p>
+						<p>Sophia Hsu, Carolyn Betensky, Melissa Free, Sophia Hsu, Ji Eun Lee, and Cherrie Kwok. “Africa, Diaspora, and the British Empire: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html">https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html</a>.</p>
 					</section>
 			</main>
 			
