rename secole section

--- a/html/lesson_plans/seacole_undisciplining_autobiography.html
+++ b/html/lesson_plans/seacole_undisciplining_autobiography.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-    <title>Autobiographical Writing | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Situates Mary Seacole’s Wonderful Adventures of Mrs. Seacole within the context of Victorian and postcolonial autobiographical writing." />
+    <title>Undisciplining Victorian Autobiography | Undisciplining the Victorian Classroom</title>
+		<meta name="description" content="Situates Mary Seacole’s Wonderful Adventures of Mrs. Seacole within the context of Victorian and postcolonial autobiographical writing."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
@@ -43,7 +43,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan">Autobiographical Writing</h2>
+					<h2 id="lesson-plan">Undisciplining Victorian Autobiography</h2>
 
           <img width="100%" height="300px" style="background: #e6e6e6;"/>
 
@@ -228,6 +228,7 @@
 					<section aria-labelledby="biography">
 						<h3 id="biography">Developer Biography</h3>
 
+						<p>Heidi Kaufman is Associate Professor of English at the University of Oregon. She works on nineteenth-century literary culture, archives, and digital humanities. Her forthcoming book, <em>The Archive’s East End: Literary and Print Culture in 19<sup>th</sup>-Century London</em> (University of Virginia, expected publication 2022) explores the creation and study of archives as a response to cultural silences and marginalized perspectives. Her corresponding digital archive, <a href="https://eastendarchives.net/">The East End Digital Library</a>, creates a space for engaging with writing from the East End of London and of responding to absences in the cultural record. She teaches courses in nineteenth-century literature, digital humanities, and archival theory.</p>
 					</section>
 
 					<section aria-labelledby="citation">
