update seacole intro

--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -65,9 +65,34 @@
 						</div>
 					</section>
 
+					<aside class="breakout-quote" aria-labelledby="user-guide">
+						<h3 id="user-guide">Lesson Plan User Guide</h3>
+
+						<p>Visitors to this site may find the following lesson plans helpful in revising existing courses or in developing new ones. We designed these lesson plans to be suggestive not exhaustive, and people should feel welcome to use all or part of them as prompts for rethinking their teaching and research on Mary Seacole and the Caribbean. If you draw on our lesson plans for your work, including in your own syllabi, please be sure to acknowledge the developers by using the citation information provided at the bottom of each page.</p>
+					</aside>
+
 					<section aria-labelledby="introduction">
 						<h3 id="introudction">Introduction</h3>
 
+						<p>In the fall of 2020, the present set of scholars first came together as part of the <em>Undisciplining the Classroom</em> (UVC) project. Our goal was to develop set of anti-racist teaching materials that focused on the Caribbean. Four of us (Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson) shared an interest in Caribbean studies and had used a variety of approaches for teaching Caribbean literature and culture in our classrooms. The fifth (Adrian S. Wisnicki) joined the group on behalf of the main UVC co-organizers, but strategically chose to work outside his main areas of expertise (African studies; postcolonial studies; technology and culture) in order to serve as group facilitator. After consultation, we decided to build a model set of “undisciplined” lesson plans focused on Mary Seacole, the author of <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em> (1857).</p>
+
+						<p>In the subsequent months, we discovered that we were united by our commitment to working in an intentional fashion, in solidarity with the goals of the UVC, and in creative collaboration with one another. We began our creative process by learning about one another's backgrounds and about the reasons that brought us to the project in the first place. Deliberative consultation, in turn, led us to focus on Seacole's historical contexts and the contemporary contexts in which her work is taught. With this focus established, we began to meet on a bimonthly basis to work on the project. Our subsequent discussions evolved from brainstorming ideas and lists of texts, to identifying pathways into the materials, to shaping materials and ideas around these pathways, and, finally, to creating four lesson plans through a process of iterative creation and cooperative peer review.</p>
+
+						<p>Our lesson plans are thus united by a basic overarching structure and emerge out of a vibrant environment of scholarly consultation. Each lesson plan identifies key learning outcomes, charts a number of educational pathways, notes related contemporary topics, and concludes by presenting curated sets of primary and secondary materials that might be used to structure classroom study. Collectively, the lesson plans support a variety of pedagogical approaches, from in-depth rethinking of key syllabus components to newly re-informing and expanding the approaches to existing classroom materials.</p>
+
+						<p>More generally, each lesson plan has been developed by one scholar, but incorporates the collective ideas of the entire group.</p>
+							
+							<ul>
+								<li>“<a href="/html/lesson_plans/seacole_decentering_britishness.html">Decentering Britishness</a>” (Kira Braham) is designed to foreground conversations about Seacole’s complex positioning as a colonial subject of color and to encourage critical discourse about “Britishness” (or “Englishness”) as an identity category.</li>
+								
+								<li>“<a href="/html/lesson_plans/seacole_undisciplining_autobiography.html">Undisciplining Victorian Autobiography</a>” (Heidi Kaufman) situates Mary Seacole’s <em>Wonderful</em> <em>Adventures of Mrs. Seacole </em>within the context of Victorian and postcolonial autobiographical writing, and foregrounds two complicating features of Seacole’s work: her identity as a woman and as an Afro-Caribbean writer.</li>
+
+								<li>“<a href="/html/lesson_plans/seacole_recentering_nursing.html">Recentering Nursing in Wartime</a>” (Indu Ohri) offers students an expansive look at the professionalization of female nursing in British, transatlantic, and transnational combat zones, specifically those of the Crimean War (1853-56) and The American Civil War (1861-65).</li>
+
+								<li>“<a href="/html/lesson_plans/seacole_decolonizing_heathcare.html">Decolonizing Health(care)</a>” (Breanna Simpson) focuses on Mary Seacole’s positioning in the history of medicine and its relation to the study, teaching, and practice of the “care” professions, particularly nursing, and considers some of the ways that readings of Seacole and her autobiography are framed in the context of the history, study, and practice of healthcare.</li>
+							</ul>
+
+						<p>In all cases, the goal has been to bring fresh perspectives and critical framing to bear on teaching the work of Mary Seacole and to produce materials that will support the work of scholars and inform the teaching of a new generation of students.</p>
 					</section>
 
 					<section aria-labelledby="citation">
