--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -67,6 +67,12 @@
 						</div>
 					</section>
 
+					<aside class="breakout-quote" aria-labelledby="user-guide">
+						<h3 id="user-guide">Lesson Plan User Guide</h3>
+
+						<p>Visitors to this site may find the following lesson plans helpful in revising existing courses or in developing new ones. We designed these lesson plans to be suggestive not exhaustive, and people should feel welcome to use all or part of them as prompts for rethinking their teaching and research on Africa, the African diaspora, and the British empire. If you draw on our lesson plans for your work, including in your own syllabi, please be sure to acknowledge the developers by using the citation information provided at the bottom of each page.</p>
+					</aside>
+
 					<section aria-labelledby="introduction">
 						<h3 id="introudction">Introduction</h3>
 						<p>We are five Victorian studies scholars from different backgrounds and institutions at various stages of our careers. Inspired by Christina Sharpe’s call and that of Ronjaunee Chatterjee, Alicia Mireles Christoff, and Amy R. Wong, we come together with the common goal of undisciplining ourselves. This is a process that is very much in progress and that—for us and, we believe, for Victorian studies writ large—is and must be facilitated through shared experience. Our collaboration and the open, supportive conversations we have had while building these lesson plans have been crucial as we learn and unlearn from each other and scholars from other disciplines, including Black, African, and Postcolonial Studies.</p>
