--- a/html/about.html
+++ b/html/about.html
@@ -54,22 +54,22 @@
 
 				<section aria-labelledby="organizers">
 					<h2 id="organizers">Organizers</h2>
-					<div><a href="/html/about/.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<div><a href="/html/about/organizers.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
 				</section>
 
 				<section aria-labelledby="contributors">
-					<h2 id="contributors">Contributors</h2>
-					<div><a href="/html/about/.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<h2 id="contributors">Project Contributors</h2>
+					<div><a href="/html/about/project_contributors.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
 				</section>
 
 				<section aria-labelledby="faq">
 					<h2 id="faq">Frequently Asked Questions</h2>
-					<div><a href="/html/about/.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<div><a href="/html/about/faq.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
 				</section>
 
 				<section aria-labelledby="bibliography">
 					<h2 id="bibliography">Bibliography</h2>
-					<div><a href="/html/about/.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<div><a href="/html/about/bibliography.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
 				</section>
 			</main>
 			
