--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -48,7 +48,7 @@
           <img width="100%" height="400px" style="background: #e6e6e6;"/>
 
 					<section>
-						<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process and has sought to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The founding organizers are grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
+						<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process. One of our primary goals with this site is to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The founding organizers are grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
 
 						<ul>
 							<li><strong>Zarena Aslami</strong> (Michigan State University)</li>
