--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -77,7 +77,7 @@
 					<h2 id="africa-2">Africa, Diaspora, and the British Empire #2</h2>
 					<ul>
 						<li>Lesson Plans</li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Undisciplining the Dramatic Monologue</a></li>
+						<li><a href="/html/lesson_plans/africa_dramatic_monologue.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Undisciplining the Dramatic Monologue</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Southern Africa, 1825-1930</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
