--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					</div>
 
 					<h2 id="call-for-syllabi">Call for Syllabi (CFS)</h2>
-					<p class="center small"><strong>Deadline:</strong> Accepted on a rolling basis</p>
+					<p class="center"><strong>Deadline:</strong> Accepted on a rolling basis</p>
 					<p><a href="https://undiscipliningvc.org/">Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging  Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds and 2) introduce less-studied, global, Victorian-era writers, artists and communities into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 
 					<p>Currently, we are in the process of building content that models antiracist teaching practices for Victorian studies and are seeking syllabi from instructors whose work in the classroom aligns with the mission of <em>Undisciplining the Victorian Classroom.</em> This content will be published on our website after a peer review process, to become part of our open-access resource. While these courses should feature a text or texts from the Victorian era, the syllabi do not need to be exclusively focused on 19th-century literature. Such syllabi can be original syllabi from courses already taught, revised versions of previously used syllabi, or syllabi that have been designed but not yet deployed in a course setting.</p>
@@ -165,13 +165,11 @@
 					
 					<p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to  <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google mailing list form</a>.</p>
 				</section>
-
-				<hr />
 			
-				<section aria-labelledby="image-details" class="small details">
-					<h3 id="image-details">Image Details</h3>
+				<section aria-labelledby="image-details" class="details">
+					<h2 id="image-details">Image Details</h2>
 
-						<h4>Slideshow</h4>
+						<h3>Slideshow</h3>
 						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art. CC0 “No Rights Reserved.”</p>
 
 						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “Earl’s Court Station.” In <a href="https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up">A Japanese Artist in London</a>, by Yoshio Markino, 196. London: Chatto & Windus, 1910. Public domain image.</p>
@@ -183,21 +181,17 @@
 						<!-- <h4>Coming Soon</h4>
 						<p id="gee">Gee, William. “<a href="https://collections.tepapa.govt.nz/object/417717">Carving Scene</a>.” Tōtara wood. Wellington, New Zealand, c.1905. Te Papa (GH007416). Museum of New Zealand | Te Papa Tongarewa. Gift of Mrs G. M. Williams, 1965. <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.</p> -->
 
-						<h4>Call for Syllabi</h4>
+						<h3>Call for Syllabi</h3>
 						<p id="dance">Anonymous Tlingit Artist. “<a href="https://www.artic.edu/artworks/86812/dance-blanket-with-diving-whale-and-raven-motifs">Dance Blanket with Diving Whale and Raven Motifs</a>.” Wool and bark. Northwest Coast of Alaska, United States, c.1880-c.1900. 1961.568. Art Institute of Chicago. Kate S. Buckingham Endowment. <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a>.</p>
 				</section>
-			
-				<hr />
 
-				<section aria-labelledby="site-code" class="small">
-					<h3 id="site-code">Site Code</h3>
+				<section aria-labelledby="site-code">
+					<h2 id="site-code">Site Code</h2>
 					<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences.</p>
 				</section>
 
-				<hr />
-
 				<section aria-labelledby="citation">
-					<h3 id="citation">Page Citation (MLA)</h3>
+					<h2 id="citation">Page Citation (MLA)</h2>
 					<p>Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, organizers. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org">https://undiscipliningvc.org</a>.</p>
 				</section>
 
