--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
 		<title>Zoomcast with Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice speak with Ryan Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”" />
+		<meta name="description" content="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice speak with Ryan Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
-		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
-		<meta http-equiv="pragma" content="no-cache" />
-		<meta http-equiv="expires" content="0" />
+		<meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
+		<meta http-equiv="pragma" content="no-cache"/>
+		<meta http-equiv="expires" content="0"/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
@@ -61,7 +61,7 @@
 					<p id="text"><strong>Speakers:</strong> Jennifer Hayward (guest), Jessie Reeder (guest), and Michelle Prain Brice (guest), Ryan Fong (host)</p>
 					<p><strong>Date:</strong> February 25, 2021</p>
 					<p><strong>Length:</strong> 35:39</p>
-					<hr/>
+					<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
 				</section>
 
 				<summary aria-labelledby="overview">
@@ -106,8 +106,8 @@
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
 		
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
