--- a/html/about.html
+++ b/html/about.html
@@ -53,8 +53,8 @@
 				</section>
 
 				<section aria-labelledby="organizers">
-					<h2 id="organizers">Organizers</h2>
-					<div><a href="/html/about/organizers.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<h2 id="organizers">Founding Organizers</h2>
+					<div><a href="/html/about/founding_organizers.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
 				</section>
 
 				<section aria-labelledby="contributors">
