update html wording

--- a/html/about/founding_organizers.html
+++ b/html/about/founding_organizers.html
@@ -36,7 +36,7 @@
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
-		<div class="text-container about content">
+		<div class="text-container content about biographies">
 
 			<div data-include="nav"></div>
 
@@ -47,8 +47,10 @@
 
           <!-- <img width="100%" height="400px" style="background: #e6e6e6;"/> -->
 
-					<section id="biographies">
+					<section>
 						<!-- <h3 id="biographies">Biographies</h3> -->
+
+						<hr/>
 
 						<p><img src="/img/about/chaozon-bauer.jpg"/><strong>Pearl Chaozon Bauer, PhD</strong> (Associate Professor of English, Notre Dame de Namur University) teaches courses in literature and film, writing, and community engagement. Motivated by transformational and collaborative leadership models, her research, teaching, community engagement, course development and curriculum design are informed by Critical Pedagogy, Critical Race Theory, Gender and LGBTQIA+ Studies, Indigenous Knowledge and Peace Studies methods and philosophy. Pearl is currently working on two book projects: <em>Love Among the Poets: The Victorian Poetics of Intimacy</em>, co-edited with Dr. Erik Gray (Columbia University), is a collection of essays that reconsiders familial, friendly, and erotic intimacy in nineteenth-century British poetry; and <em>Pedagogy of Space</em>, a collaboration with Dr. Jennifer Murphy (Notre Dame de Namur University), reconceptualizes how classroom space must evolve to fit the needs of the twenty-first century student and facilitator. For fun, she teaches yoga and meditation, leads fermentation and pickling workshops, hunts for mushrooms, and enjoys going on birding hikes.</p>
 
