--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -36,7 +36,7 @@
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
-		<div class="text-container lesson-plans content">
+		<div class="text-container content lesson-plans">
 
 			<div data-include="nav"></div>
 
