--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -38,7 +38,7 @@
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
-		<div class="text-container zoomcasts content">
+		<div class="text-container content zoomcasts">
 
 			<div data-include="nav"></div>
 
