update kira's file

--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -144,7 +144,7 @@
             <section aria-labelledby="materials-1">
               <h4 id="materials-1">Nineteenth-/Early Twentieth-Century Materials</h4>
 
-							<p>Longfellow, Henry Wadsworth. 1883. “Saint Filomena.” In <em>The Complete Poetical Works of Henry Wadsworth Longfellow</em>, 173–74. Riverside Press.</p>
+							<p>Longfellow, Henry Wadsworth. 1883. “Saint Filomena.” In <em>The Complete Poetical Works of Henry Wadsworth Longfellow</em>, 173–74. Cambridge: Riverside Press.</p>
 
 							<p>Punch Magazine. 1856. “<a href="https://www.victorianlondon.org/people/seacole.htm">A Stir for Seacole</a>.” Poem.</p>
 
@@ -179,6 +179,8 @@
 							<p>Pinto, Samantha. 2019. “‘The Right Woman in the Right Place’: Mary Seacole and Corrective Histories of Empire.” <em>Ariel: A Review of International English Literature</em> 50 (2–3): 1–31.</p>
 							
 							<p>Poon, Angelia. 2007. “Comic Acts of Belonging: Performing Englishness in Wonderful Adventures of Mrs. Seacole in Many Lands.” <em>Victorian Literature and Culture</em> 35: 501–16.</p>
+
+							<p>Salih, Sarah. 2010. “Mulattos in the Contact Zone: Mary Seacole and Ozias Midwinter.” In <em>Representing Mixed Race in Jamaica and England from the Abolition Era to the Present</em>, 124–34. Abingdon: Routledge.</p>
             </section>
 
             <section aria-labelledby="materials-5">
