update heidi's lp

--- a/html/lesson_plans/seacole_undisciplining_autobiography.html
+++ b/html/lesson_plans/seacole_undisciplining_autobiography.html
@@ -101,8 +101,14 @@
               <h4 id="pathway-1">Race and Gender in Victorian Life Writing</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anonymous 1837; [1808] 2008; Brereton 1998; Brontë [1847] 2003; Martineau [1844] 2003; Nightingale [1852] 1979; Pennington 2018; Prince [1831] 2000</p>
             
-              <p><strong>Summary:</strong> How might we approach Seacole’s constructions of Creole femininity? How does her text endorse, strategically deploy, or outright resist normative Victorian gender roles? How does her self-identification as a Creole Jamaican with “good Scotch blood” rework normative Victorian racial codes? Does Seacole leverage Victorian gender constructions, particularly her emphasis on her mother-like qualities, to her (dis)advantage? Students focusing on gender and race might consider the relations of these constructions in Seacole’s narrative and those from her contemporary autobiographical counterpart, Florence Nightingale. Alternatively, students might consider Seacole in light of nineteenth-century forms of autobiographical writing, such as the <em>fictional</em> creole Bertha Mason in <em>Jane Eyre</em> or the <em>autobiographical </em>Mary Prince in <em>A History of Mary Prince</em>.</p>
+              <p><strong>Summary:</strong> How might we approach Seacole’s constructions of Creole femininity? How does her text endorse, strategically deploy, or outright resist normative Victorian gender roles? How does her self-identification as a Creole Jamaican with “good Scotch blood” rework normative Victorian racial codes? Does Seacole leverage Victorian gender constructions, particularly her emphasis on her mother-like qualities, to her (dis)advantage? Students focusing on gender and race might consider the relations of these constructions in Seacole’s narrative and those from her contemporary autobiographical counterpart, Florence Nightingale. Alternately, students might consider Seacole in light of nineteenth-century autobiographical forms, such as the Creole Bertha Mason in <em>Jane Eyre: An Autobiography</em> (1847) or Mary Prince’s <em>A History of Mary Prince</em> (1831).</p>
             </section>
+
+						<aside class="breakout-quote">
+							<p>“[U]nless I am allowed to tell the story of my life in my own way, I cannot tell it at all.”</p>
+
+							<p class="right">— Mary Seacole <br/><em>Wonderful Adventures of Mary Seacole in Many Lands</em> (1857), Chap. XV</p>
+						</aside>
 
             <section aria-labelledby="pathway-2">
               <h4 id="pathway-2">Caribbean Autobiographical Writing</h4>
