add zoomcast transcripts html

--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -62,6 +62,7 @@
 						<p><strong>Date:</strong> March 17, 2021</p>
 						<p><strong>Length:</strong> 30:36</p>
 						<p><strong>Zoomcast Series:</strong> Positionality</p>
+						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/2021-03-17-Aslami-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/2021-03-17-Aslami-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 					</section>
 					
 					<summary aria-labelledby="overview">
