--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -62,6 +62,7 @@
 						<p><strong>Date:</strong> February 4, 2021</p>
 						<p><strong>Length:</strong> 40:50</p>
 						<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
+						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/2021-02-04-Rudy-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/2021-02-04-Rudy-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 					</section>
 
 					<summary aria-labelledby="overview">
