--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -62,6 +62,7 @@
 					<p><strong>Date:</strong> February 25, 2021</p>
 					<p><strong>Length:</strong> 35:39</p>
 					<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
+					<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/2021-02-25-Hayward-et-al-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/2021-02-25-Hayward-et-al-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 				</section>
 
 				<summary aria-labelledby="overview">
