--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -55,7 +55,7 @@
 							<li><strong>Carolyn Betensky</strong> (University of Rhode Island)</li>
 							<li><strong>Kira Braham</strong> (Louisiana School for Math, Science, and the Arts)</li>
 							<li><strong>Michelle Prain Brice</strong> (Universidad Adolfo Ibañez; Pontificia Universidad Católica de Valparaíso)</li>
-							<li><strong>Jenée Crayne</strong></li>
+							<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
 							<li><strong>Melissa Free</strong> (Arizona State University)</li>
 							<li><strong>Jennifer Hayward</strong> (College of Wooster)</li>
 							<li><strong>Heidi Kaufman</strong> (University of Oregon)</li>
