--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,6 @@
 		<link rel="preconnect" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0001"/>
-		<link rel="preload" as="script" href="/js/carousel-complete.js"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0001"/>
 		<link rel="stylesheet" type="text/css" href="/css/cluster.css?=newVers_0001"/>
 		<script>
@@ -54,22 +53,22 @@
 
 				<section aria-labelledby="organizers">
 					<h2 id="organizers">Founding Organizers</h2>
-					<div><a href="/html/about/founding_organizers.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<div><a href="/html/about/founding_organizers.html"><img loading="" src="" srcset="" sizes="" alt="" title=""/></a></div>
 				</section>
 
 				<section aria-labelledby="contributors">
 					<h2 id="contributors">Project Contributors</h2>
-					<div><a href="/html/about/project_contributors.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<div><a href="/html/about/project_contributors.html"><img loading="" src="" srcset="" sizes="" alt="" title=""/></a></div>
 				</section>
 
 				<section aria-labelledby="faq">
 					<h2 id="faq">Frequently Asked Questions</h2>
-					<div><a href="/html/about/faq.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<div><a href="/html/about/faq.html"><img loading="" src="" srcset="" sizes="" alt="" title=""/></a></div>
 				</section>
 
 				<section aria-labelledby="bibliography">
 					<h2 id="bibliography">Bibliography</h2>
-					<div><a href="/html/about/bibliography.html"><img loading="lazy" src="" sizes="" alt="" title="" height="250"/><!--<span>Cluster Introduction</span>--></a></div>
+					<div><a href="/html/about/bibliography.html"><img loading="" src="" srcset="" sizes="" alt="" title=""/></a></div>
 				</section>
 			</main>
 			
@@ -81,7 +80,6 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="/js/carousel-complete.js"></script>
 		<script>
 			// Adapted from https://stackoverflow.com/a/31837264
 			// Includes HTML snippets
