--- a/html/about.html
+++ b/html/about.html
@@ -53,22 +53,22 @@
 
 				<section aria-labelledby="organizers">
 					<h2 id="organizers">Founding Organizers</h2>
-					<div><a href="/html/about/founding_organizers.html"><img loading="" src="" srcset="" sizes="" alt="" title=""/></a></div>
+					<div><a href="/html/about/founding_organizers.html"><img loading="" src="/img/about/tiles/uvc_0024.jpg" srcset="" sizes="" alt="" title=""/></a></div>
 				</section>
 
 				<section aria-labelledby="contributors">
 					<h2 id="contributors">Project Contributors</h2>
-					<div><a href="/html/about/project_contributors.html"><img loading="" src="" srcset="" sizes="" alt="" title=""/></a></div>
+					<div><a href="/html/about/project_contributors.html"><img loading="" src="/img/about/tiles/uvc_0022.jpg" srcset="" sizes="" alt="" title=""/></a></div>
 				</section>
 
 				<section aria-labelledby="faq">
 					<h2 id="faq">Frequently Asked Questions</h2>
-					<div><a href="/html/about/faq.html"><img loading="" src="" srcset="" sizes="" alt="" title=""/></a></div>
+					<div><a href="/html/about/faq.html"><img loading="" src="/img/about/tiles/uvc_0023.jpg" srcset="" sizes="" alt="" title=""/></a></div>
 				</section>
 
 				<section aria-labelledby="bibliography">
 					<h2 id="bibliography">Bibliography</h2>
-					<div><a href="/html/about/bibliography.html"><img loading="" src="" srcset="" sizes="" alt="" title=""/></a></div>
+					<div><a href="/html/about/bibliography.html"><img loading="" src="/img/about/tiles/uvc_0021.jpg" srcset="" sizes="" alt="" title=""/></a></div>
 				</section>
 			</main>
 			
