--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -110,6 +110,12 @@
               <p>Students could also inspect how nurses handled the pressures of racism, sexism, and classism, along with the dangers of military conflict, in order to perform their care work and earn respect for their accomplishments. One possible discussion topic is the competition that arose between nurses, such as Nightingale and the other nursing administrators from England, Nightingale and Seacole, or the fictional Mary Phinney and Anne Hastings from <em>Mercy Street</em>. However, nurses also cultivated a strong sense of professional solidarity, paid tribute to other members of their community, and trained younger generations of female care workers. For instance, the perceived “rivalry” between Nightingale and Seacole can be contrasted with the interracial friendship between Clara Barton and Susie King Taylor. Women’s camaraderies and rivalries in nursing can also serve as a starting point for students to examine first-wave feminism and women’s work movements later in the century. Female nurses’ narratives about their military service and related scholarly materials record their pioneering efforts to work with (or against) others across gender, race, class, national, and religious lines. During these conflicts, the highly-publicized entrance of female nurses onto battlefields and in hospitals was important because they generated new professional roles for women in multiple countries.</p>
             </section>
 
+            <aside class="breakout-quote">
+              <p>“Of course, had it not been for my old strong-mindedness . . . I should have given up the scheme na score of times in as many days; so regularly did each successive day give birth to a fresh set of rebuffs and disappointments. I shall make no excuse to my readers for giving them a pretty full history of my struggles to become a Crimean <em>heroine</em>!”</p>
+
+              <p class="right">— Mary Seacole <br/><em>Wonderful Adventures of Mary Seacole in Many Lands</em> (1857), Chap. VIII</p>
+            </aside>		
+
             <section aria-labelledby="pathway-2">
               <h4 id="pathway-2">The “Heroic” Individual and the Community</h4>
               <p><strong>Recommended Texts (full references below):</strong> Barton (1892) n.d.; Helmstadter and Godden 2012; Markovitz 2009; Nightingale 1858; Seacole 2005; Taylor [1902] 1999; Tennyson [1855] 1893; “Mercy Street” 2016</p>
